force-app/main/default/objects/Warranty_Claim__c/Warranty_Claim__c.object-meta.xml
<CustomObject>
    <label>Warranty Claim</label>
    <pluralLabel>Warranty Claims</pluralLabel>
    <description>Warranty Claim</description>
    <nameField>
        <label>Warranty Claim Name</label>
        <type>AutoNumber</type>
        <displayFormat>WTY-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>