force-app/main/default/objects/Warranty_Claim__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Warranty Claims</relationshipLabel>
    <relationshipName>Warranty_Claims</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case</description>
</CustomField>