force-app/main/default/objects/Warranty_Claim__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <label>Expires On</label>
    <type>Date</type>
    <description>Expires On</description>
</CustomField>